--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,11 @@
   "version": "1.0",
   "background": {
     "scripts": [
+      "lib/jquery-3.1.1.min.js",
       "lib/dropbox/Dropbox-sdk.min.js",
+
+      "src/provider/DropBoxProvider.js",
+      "src/utils.js",
       "src/main.js"
     ]
   },
