--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,8 @@
     "scripts": [
       "lib/jquery-3.1.1.min.js",
       "lib/dropbox/Dropbox-sdk.min.js",
+      "lib/kdbxweb.js",
+      "lib/md5.min.js",
 
       "src/provider/DropBoxProvider.js",
       "src/utils.js",
